--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,15 @@
         "symfony/translation": "~2.8|3.0.*",
         "symfony/twig-bridge": "~3.2",
         "symfony/validator": "~2.8|3.0.*",
-        "doctrine/dbal": "~2.2"
+        "doctrine/dbal": "~2.2",
+        "dflydev/doctrine-orm-service-provider": "^2.0"
     },
     "autoload": {
         "psr-0": { "": "src/" },
-        "psr-4": { "Controllers\\": "src/Controllers" }
+        "psr-4": { 
+            "Controllers\\": "src/Controllers" ,
+            "Entities\\": "src/Entities"
+        }        
     },
     "extra": {
         "branch-alias": {
